@@ -23,7 +23,7 @@ Template Name:  Content/Sidebar
 
 get_header(); ?>
 
-<div id="content" class="grid col-620">
+<div id="content" class="grid col-620" role="main">
 
 	<?php get_template_part( 'loop-header', get_post_type() ); ?>
 
