@@ -22,7 +22,7 @@ if ( !defined( 'ABSPATH' ) ) {
 
 get_header(); ?>
 
-<div id="content" class="grid col-620">
+<div id="content" class="grid col-620" role="main">
 
 	<?php if ( have_posts() ) : ?>
 
