@@ -27,12 +27,20 @@ if ( !defined( 'ABSPATH' ) ) {
 <?php endif; ?>
 
 <div class="post-meta">
-	<?php responsive_post_meta_data(); ?>
+	<?php
+	include_once( ABSPATH . 'wp-admin/includes/plugin.php' ); 
+	if( is_plugin_active('responsivepro-plugin/index.php')){
+		responsivepro_plugin_posted_on();
+		responsivepro_plugin_posted_by();
+		responsivepro_plugin_comments_link();
+	}else{	
+	responsive_post_meta_data(); ?>
 
 	<?php if ( comments_open() ) : ?>
 		<span class="comments-link">
 		<span class="mdash">&mdash;</span>
 			<?php comments_popup_link( __( 'No Comments &darr;', 'responsive' ), __( '1 Comment &darr;', 'responsive' ), __( '% Comments &darr;', 'responsive' ) ); ?>
 		</span>
-	<?php endif; ?>
+	<?php endif; 
+	} ?>
 </div><!-- end of .post-meta -->
