@@ -9,7 +9,7 @@ if ( !defined( 'ABSPATH' ) ) {
  * Footer Widget Template
  *
  *
- * Please do not edit this file. This file is part of the Cyber Chimps Framework and all modifications
+ * Please do not edit this file. This file is part of the CyberChimps Framework and all modifications
  * should be made in a child theme.
  *
  * @category CyberChimps Framework
