@@ -21,7 +21,7 @@ if ( !defined( 'ABSPATH' ) ) {
  */
 ?>
 <?php responsive_widgets_before(); // above widgets container hook ?>
-	<div id="widgets" class="grid-right col-300 rtl-fit">
+	<div id="widgets" class="grid-right col-300 rtl-fit" role="complementary">
 		<?php responsive_widgets(); // above widgets hook ?>
 
 		<?php if ( !dynamic_sidebar( 'left-sidebar' ) ) : ?>
