@@ -21,7 +21,7 @@ if ( !defined( 'ABSPATH' ) ) {
  */
 ?>
 <?php responsive_widgets_before(); // above widgets container hook ?>
-	<div id="widgets" class="grid col-300 fit">
+	<div id="widgets" class="grid col-300 fit" role="complementary">
 		<?php responsive_widgets(); // above widgets hook ?>
 
 		<?php if ( !dynamic_sidebar( 'right-sidebar' ) ) : ?>
